# SFTPWarden

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN sftpwarden.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  security.yml
charts/sftpwarden/: Chart.yaml  README.md  values.schema.json  values.yaml
docker/: sshd_config
docker/runtime/: Dockerfile  entrypoint.sh  sshd_config.template
docker/watcher/: Dockerfile  entrypoint.sh
docs/: architecture.md  cli-reference.md  cli.md  conf.py  configuration.md  contexts.md  contributing.md  getting-started.md  index.md  installation.md  isolation-model.md  named-keys.md  operations.md  providers.md  refresh.md  remote-contexts.md  roadmap.md  runtime.md  security.md  troubleshooting.md  users.md  watcher.md
docs/_static/: custom.css  search_modal.js  sidebar_scroll.js  sidebar_sections.js
docs/cli/: config.md  contexts.md  core.md  helm.md  init.md  kubernetes.md  providers.md  runtime.md  user-keys.md  users.md  watcher.md
examples/: README.md
examples/csv/: README.md  docker-compose.yml  sftpwarden.yaml  users.csv
examples/kubernetes/: README.md  host-keys-secret.example.yaml  values-postgresql.yaml
examples/mariadb/: README.md  docker-compose.yml  sftpwarden.yaml
examples/mongodb/: README.md  sftpwarden.yaml
examples/mysql/: README.md  schema.sql  sftpwarden.yaml
examples/postgres/: README.md  docker-compose.yml  sftpwarden.yaml
examples/remote-local-sync/: README.md
examples/remote-only/: README.md
examples/sqlite/: README.md  docker-compose.yml  sftpwarden.yaml
examples/watcher-docker/: README.md  docker-compose.yml
examples/yaml/: README.md  docker-compose.yml  sftpwarden.yaml  users.yaml
sftpwarden/: __init__.py  __main__.py  cli.py  contexts.py  refresh.py  runtime.py  watcher.py
sftpwarden/cli_commands/: app.py  common.py  config.py  context.py  core.py  deploy_schema.py  errors.py  helm.py  init.py  kubernetes.py  output.py  prompts.py  provider.py  runtime.py  users.py  watcher.py
sftpwarden/config/: __init__.py  global_config.py
sftpwarden/contexts/: __init__.py  registry.py
sftpwarden/providers/: __init__.py  base.py  csv_provider.py  mongodb_provider.py  mysql_provider.py  postgres_provider.py  registry.py  sql.py  sqlite_provider.py  yaml_provider.py
sftpwarden/refresh/: __init__.py  core.py
sftpwarden/remote/: checks.py  deploy.py  ssh.py
sftpwarden/render/: compose.py  kubernetes.py
sftpwarden/runtime/: __init__.py  core.py
sftpwarden/security/: __init__.py  passwords.py
sftpwarden/services/: backup.py  cli_workflows.py  context_cleanup.py  deploy.py  health.py  provider_schema.py  provider_transfer.py  users.py
sftpwarden/system/: __init__.py  commands.py
sftpwarden/users/: __init__.py  models.py  service.py
sftpwarden/utils/: _version.py  collections.py  console.py  constants.py  dotted.py  dsn.py  files.py  paths.py  platform.py  validation.py
sftpwarden/watcher/: __init__.py  base.py  constants.py  core.py  registry.py
src/sftpwarden/: __init__.py  cli.py  compose.py  config.py  contexts.py  errors.py  global_config.py  passwords.py  paths.py  providers.py  refresh.py  runtime.py  ssh.py  watcher.py
tests/: conftest.py  test_backup_restore.py  test_cleanup_artifacts.py  test_cli.py  test_cli_adapters.py  test_config.py  test_config_context_edges.py  test_contexts_and_watch.py  test_dockerfile.py  test_health_checks.py  test_init_storage.py  test_kubernetes.py  test_packaging.py  test_provider_transfer.py  test_providers.py  test_remote_checks.py  test_runtime.py  test_services_providers_utils.py  test_sql_providers.py  test_system_commands.py  test_user_service.py  test_v11_providers.py  test_workflows.py
tools/: clean_artifacts.py  verify_helm_release_metadata.py
(+86 files in other folders)
